--- a/style.css
+++ b/style.css
@@ -8,17 +8,20 @@ body,html {
     margin: 0;
     padding: 0;
     font-family: sans-serif;
+}
+
+body {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    height: 100vh;
 }
 
 .keys {
     display: flex;
+    flex: 1;
     flex-direction: column;
-    width: 50%;
-    min-height: 100vh;
     align-items: center;
     justify-content: center;
 }
